2007-06-02  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_text.cpp: applied patch from Francois Guibert,
	fixed bug about the "Var" thing of text fields.

2007-05-29  Vitaly Alexeev <tishka92@yahoo.com>

	fixed bug #1727294 
	* gameswf/gameswf_environment.*: parse_path() is static now,
	it's useful outside of class too
	* gameswf/gameswf_character.*: added find_target()
	* gameswf/gameswf_sprite.cpp: removed set_text_value from set_member(),
	first: reduces performance, second: VAR from text field is a link to 
	variable in sprite_instance therefore we need to get it value in advance() time
	* gameswf/gameswf_text.*: if VAR is set then 
	- set_text_value() assigns text value to new text & call VAR->set_member()
	- get_text_value() gets text value from VAR->get_member()
	if VAR is changed outside of text_field then text_field gets new text value in
	advance()

2007-05-29  Vitaly Alexeev <tishka92@yahoo.com>

	* base/tu_config.h,
	* gameswf/gameswf.h,
	* gameswf/gameswf_font.*,
	* gameswf/gameswf_fontlib.cpp,
	* gameswf/gameswf_sprite.cpp,
	* gameswf/gameswf_text.cpp,
	* gameswf/gameswf_freetype.*,
	* gameswf/win32/VC7/gameswf.vcproj: 
	the support of dynamic(not embedded) fonts is added (not completed yet).
	It is based on freetype library
	
2007-05-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_as_sprite.cpp,
	* gameswf/gameswf_sprite.*: added goto_frame(const as_value& target_frame)
	
2007-05-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_as_sprite.cpp: applied the patch from Francois Guibert,
	fixed gotoAndPlay & gotoAndStop bug, Flash tries to convert STRING to NUMBER,
	if the conversion is OK then Flash uses this NUMBER as target_frame,
	else uses STRING as label of target_frame

2007-05-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_text.cpp: divided into .cpp & .h files
	* gameswf/gameswf_as_classes/(a lot of files): assert(fn.this_ptr) is added
	* gameswf/gameswf_sprite.*,